// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should display ExpenseSummary correctly with a single expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       totaling
       
      <span>
        $2.34
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/add"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`Should display ExpenseSummary correctly with multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        54
      </span>
       
      expenses
       totaling
       
      <span>
        $973.00
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/add"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
